# sagemaker-example-notebooks-testing

./: .gitignore  README.md
cdk-project/: .eslintrc.js  .npmignore  .prettierrc.js  .pylintrc  cdk.context.json  cdk.json  package-lock.json  package.json  tox.ini  tsconfig.json
cdk-project/buildspecs/: buildspec-notebook-instance.yml  buildspec-studio.yml
cdk-project/lambda/python-functions/: athena_query.py  clean_cw_logs.py  clean_endpoints.py  common.py  github_webhook_receiver.py  start_pipeline.py
cdk-project/lib/: build-system-stack.ts  buildspecs.ts  common.ts  image-stack.ts  project-stack.ts  projects.ts
cdk-project/lib/images/codebuild-image/: Dockerfile  README.md  build.sh
cdk-project/lib/images/codebuild-image/python/: .pylintrc  README.md  setup.cfg  setup.py  tox.ini
cdk-project/lib/images/codebuild-image/python/src/notebooks/: dictionary.py  git.py  kernels.py  lint.py  parse.py  run.py  utils.py  version.py
cdk-project/lib/images/codebuild-image/python/src/notebooks/cli/: check_pr_broken_links.py  check_pr_notebooks_code.py  check_pr_notebooks_markdown.py  describe_notebook_jobs.py  git_oauth_token.py  pr_notebook_filenames.py  run_all_notebooks.py  run_pr_notebooks.py
cdk-project/lib/images/codebuild-image/python/src/sagemakerci/: changelog.py  codestar.py  git.py  kernels.py  linting.py  parse_notebook.py  run_notebook.py
cdk-project/lib/images/codebuild-image/python/src/sagemakerci/cli/: check_pr_notebooks_code.py  check_pr_notebooks_markdown.py  describe_notebook_jobs.py  git_oauth_token.py  git_release.py  pr_notebook_filenames.py  run_all_notebooks.py  run_pr_notebooks.py
cdk-project/lib/images/codebuild-image/scripts/: execute-command-if-has-matching-changes  get-java-home  if-matching-changes  is-release-build  start-dockerd
cdk-project/lib/images/processing-image/: Dockerfile  Dockerfile.1p  Dockerfile.dlc  execute.py  run_notebook
cdk-project/scripts/: create-webhook.py
codebuild-image/: publish.sh
codebuild-image/docker/: Dockerfile.cpu
codebuild-image/python/: README.md  setup.cfg
codebuild-image/python/src/sagemakerci/: common.py  run_notebook.py  utils.py  version.py
codebuild-image/python/src/sagemakerci/cli/: gitrelease.py  pr_notebook_filenames.py  remote_test.py  run_pr_notebooks.py
codebuild-image/scripts/: get-sagemaker-role-arn
processing-image/: Dockerfile
