[metadata]
name = sagemakerci
version = 0.1.0
description = Build tools for example notebooks testing


[options]
include_package_data = True
install_requires =
    boto3
    fabric
    pandas
    PyGithub


[options.extras_require]
test =
    black
    pylint
    pytest
    pytest-mock
    tox


[options.entry_points]
console_scripts =
    git-release = sagemakerci.cli.gitrelease:main
    remote-test = sagemakerci.cli.remote_test:main
    git-oauth-token = sagemakerci.cli.git_oauth_token:main
    pr-notebook-filenames = sagemakerci.cli.pr_notebook_filenames:main
    run-pr-notebooks = sagemakerci.cli.run_pr_notebooks:main
    run-all-notebooks = sagemakerci.cli.run_all_notebooks:main
