[metadata]
name = notebooks
version = 0.1.0
description = Build tools for example notebooks testing


[options]
include_package_data = True
install_requires =
    boto3
    fabric
    pandas
    PyGithub
    black-nb
    language-tool-python


[options.extras_require]
test =
    black
    pylint
    pytest
    pytest-mock
    tox


[options.entry_points]
console_scripts =
    git-oauth-token = notebooks.cli.git_oauth_token:main
    pr-notebook-filenames = notebooks.cli.pr_notebook_filenames:main
    run-pr-notebooks = notebooks.cli.run_pr_notebooks:main
    run-all-notebooks = notebooks.cli.run_all_notebooks:main
    describe-notebook-jobs = notebooks.cli.describe_notebook_jobs:main
    check-pr-notebooks-code = notebooks.cli.check_pr_notebooks_code:main
    check-pr-notebooks-markdown = notebooks.cli.check_pr_notebooks_markdown:main
